feat: implement BaseEntity and configure multi-database support (MongoDB and PostgreSQL)
- Created a BaseEntity class with common fields (createdAt, updatedAt) for MongoDB and PostgreSQL entities.
- Configured PostgreSQL connection using JPA and Hibernate with connection properties in application.properties.
- Configured MongoDB connection using Spring Data MongoDB with custom configuration for entity mappings.
- Updated entity classes to extend BaseEntity for audit tracking.

--- a/.env2
+++ b/.env2
@@ -3,7 +3,8 @@ DB_USERNAME=
 DB_PASSWORD=
 
 JWT_SECRET=
-
+MONGO_URI=mongodb://mongoUser:mongoPass@localhost:PORT/MY_DATABASE
+MONGO_DATABASE=MY_DATABASE
 
 POSTGRES_DB=meu_banco
 POSTGRES_USER=meu_usuario
