Fix: adjust messages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=mercatusAPI
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.data.mongodb.uri=${MONGO_URI}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
+
 api.security.token.secret=${JWT_SECRET:my_secret}
 api.security.token.expiration=${TOKEN_EXPIRATION}
 api.security.refresh-token.secret=${REFRESH_TOKEN_EXPIRATION}
